--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -2,7 +2,7 @@
 # http://symfony.com/doc/current/security.html
 security:
     encoders:
-        GameBundle\Entity\UserCount: sha512
+        UserBundle\Entity\UserCount: sha512
         Symfony\Component\Security\Core\User\User: plaintext
         
     
@@ -36,7 +36,7 @@ security:
                 path:       logout
                 target:     /game
             remember_me:
-                secret:     %secret%
+                secret:     '%secret%'
     
     access_control:
      - { path: ^/admin, roles: ROLE_ADMIN}
