--- a/src/UserBundle/Resources/config/services.yml
+++ b/src/UserBundle/Resources/config/services.yml
@@ -1,4 +1,4 @@
 services:
 #    game.example:
-#        class: GameBundle\Example
+#        class: UserBundle\Example
 #        arguments: ["@service_id", "plain_value", "%parameter%"]
