essai connexion user, pb redirection route

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -3,7 +3,11 @@
 parameters:
 #    parameter_name: value
 
-services:
+# services:
+#     app.webservice_user_provider:
+#         class: UserBundle\Security\User\WebserviceUserProvider
+
+# services:
 #    service_name:
 #        class: AppBundle\Directory\ClassName
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
