--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -2,22 +2,20 @@
 # http://symfony.com/doc/current/security.html
 security:
     encoders:
-        UserBundle\Entity\UserCount: sha512
-        Symfony\Component\Security\Core\User\User: plaintext
-        
+        # Symfony\Component\Security\Core\User\User: plaintext
+        UserBundle\Entity\UserCount:
+            algorithm: bcrypt
     
     role_hierarchy:
-        ROLE_ADMIN:       ROLE_USER
-        ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
-
+        ROLE_ENSEIGNANT: ROLE_USER
+        ROLE_ADMIN: [ROLE_ENSEIGNANT, ROLE_USER]
 
     # http://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
-    providers:
-        in_memory:
-            memory:
-                users:
-                    user:  { password: userpass, roles: [ 'ROLE_USER' ] }
-                    admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
+    providers:      
+        my_db_provider:
+            entity:
+                class: UserBundle:UserCount
+                property: username
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -28,10 +26,16 @@ security:
         main:
             pattern:      ^/
             anonymous:    true
-            provider:     in_memory
+            provider:     my_db_provider
             form_login:
                 login_path: login
                 check_path: login_check
+                always_use_default_target_path: false
+                default_target_path: /
+                target_path_parameter: _target_path
+                use_referer: false
+                csrf_token_generator: security.csrf.token_manager
+
             logout:
                 path:       logout
                 target:     /game
@@ -39,6 +43,7 @@ security:
                 secret:     '%secret%'
     
     access_control:
+     - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY}
      - { path: ^/admin, roles: ROLE_ADMIN}
 
 
