--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -31,7 +31,7 @@ security:
                 login_path: login
                 check_path: login_check
                 always_use_default_target_path: false
-                default_target_path: /
+                default_target_path: login
                 target_path_parameter: _target_path
                 use_referer: false
                 csrf_token_generator: security.csrf.token_manager
