--- a/src/UserBundle/Resources/config/routing.yml
+++ b/src/UserBundle/Resources/config/routing.yml
@@ -2,45 +2,64 @@ homepage:
     path:     /
     defaults: { _controller: UserBundle:Default:index }
 
-signup:
-    path:     /signup
-    defaults: { _controller: UserBundle:Session:signup }
-
-login:
-    path:     /login
-    defaults: { _controller: UserBundle:Session:login }
-
 login_check:
     path:     /login_check
 
 logout:
     path:     /logout
 
+select_gamers:
+    path:   /select
+    defaults: { _controller: GameBundle:HomeFamily:select }    
+
+check_scores:
+   path:    /scores
+   defaults: { _controller: GameBundle:HomeFamily:checkScores }
+
+admin_gamers:
+   path:    /gamers
+   defaults: { _controller: GameBundle:HomeFamily:manageGamers }
+
+admin_users:
+   path:    /administration
+   defaults: { _controller: GameBundle:Admin:manageUsers }
+      
+suggest_question:
+   path:    /question/suggest
+   defaults: { _controller: GameBundle:HomeFamily:suggestQuestion }
+
+add_question:
+    path:    /question/add
+    defaults: { _controller: GameBundle:Admin:addQuestion }
+
+moderate_question:
+    path:    /question/moderate
+    defaults: { _controller: GameBundle:Admin:moderateQuestion }
 
 
 
 
-gamer_view:
-    path:     /{id}
-    defaults: { _controller: UserBundle:Default:view }
-    requirements:
-        id: \d+
+# gamer_view:
+#     path:     /{id}
+#     defaults: { _controller: UserBundle:Default:view }
+#     requirements:
+#         id: \d+
         
 # gamer_add:
 #     path:      /add
 #     defaults:
 #         _controller: UserBundle:Default:add
 
-gamer_edit:
-    path:      /edit/{id}
-    defaults:
-        _controller: UserBundle:Default:edit
-    requirements:
-        id: \d+
+# gamer_edit:
+#     path:      /edit/{id}
+#     defaults:
+#         _controller: UserBundle:Default:edit
+#     requirements:
+#         id: \d+
 
-gamer_delete:
-    path:      /delete/{id}
-    defaults:
-        _controller: UserBundle:Default:delete
-    requirements:
-        id: \d+
+# gamer_delete:
+#     path:      /delete/{id}
+#     defaults:
+#         _controller: UserBundle:Default:delete
+#     requirements:
+#         id: \d+
