formulaire en cours

--- a/src/GameBundle/Resources/config/routing.yml
+++ b/src/GameBundle/Resources/config/routing.yml
@@ -1,3 +1,9 @@
 add_question:
     path:     /add
     defaults: { _controller: GameBundle:Default:addQuestion }
+
+combobox:
+    path: /combobox
+    defaults: { _controller: GameBundle:Admin:combobox }
+    requirements: 
+        _method: POST
