--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -7,8 +7,7 @@ security:
             algorithm: bcrypt
     
     role_hierarchy:
-        ROLE_ENSEIGNANT: ROLE_USER
-        ROLE_ADMIN: [ROLE_ENSEIGNANT, ROLE_USER]
+        ROLE_ADMIN: [ROLE_TEACHER]
 
     # http://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:      
@@ -44,6 +43,7 @@ security:
     
     access_control:
      - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY}
+     - { path: ^/signup, roles: IS_AUTHENTICATED_ANONYMOUSLY}
     #  - { path: ^/admin, roles: ROLE_ADMIN}
 
 
