--- a/src/UserBundle/Resources/config/routing.yml
+++ b/src/UserBundle/Resources/config/routing.yml
@@ -36,30 +36,8 @@ moderate_question:
     path:    /question/moderate
     defaults: { _controller: GameBundle:Admin:moderateQuestion }
 
-
-
-
-# gamer_view:
-#     path:     /{id}
-#     defaults: { _controller: UserBundle:Default:view }
-#     requirements:
-#         id: \d+
-        
-# gamer_add:
-#     path:      /add
-#     defaults:
-#         _controller: UserBundle:Default:add
-
-# gamer_edit:
-#     path:      /edit/{id}
-#     defaults:
-#         _controller: UserBundle:Default:edit
-#     requirements:
-#         id: \d+
-
-# gamer_delete:
-#     path:      /delete/{id}
-#     defaults:
-#         _controller: UserBundle:Default:delete
-#     requirements:
-#         id: \d+
+validate_question:
+    path: question/validate/{id}
+    defaults: { _controller: GameBundle:Admin:validQuestion }
+    requirements:
+        id: \d+
