récupération de questions dans formulaire ok, qq corrections à apporter

--- a/src/GameBundle/Resources/config/routing.yml
+++ b/src/GameBundle/Resources/config/routing.yml
@@ -1,6 +1,6 @@
 add_question:
     path:     /add
-    defaults: { _controller: GameBundle:Default:addQuestion }
+    defaults: { _controller: GameBundle:Default:addQuestions }
 
 combobox:
     path: /combobox
