--- a/src/UserBundle/Resources/config/routing.yml
+++ b/src/UserBundle/Resources/config/routing.yml
@@ -38,6 +38,13 @@ moderate_question:
 
 validate_question:
     path: question/validate/{id}
-    defaults: { _controller: GameBundle:Admin:validQuestion }
+    defaults: { _controller: GameBundle:Admin:validateQuestion }
     requirements:
+        _methods: GET
         id: \d+
+
+validate_question:
+    path: question/valid
+    defaults: { _controller: GameBundle:Admin:validateQuestion }
+    requirements:
+        _method: POST
