formulaire de validation OK

--- a/src/GameBundle/Resources/config/routing.yml
+++ b/src/GameBundle/Resources/config/routing.yml
@@ -14,3 +14,8 @@ remove_answer:
     requirements: 
         _method: DELETE
 
+validate_question:
+    path: /validate/{id}
+    defaults: { _controller: GameBundle:Admin:validateQuestion }
+    requirements:
+        id: \d+
