ajout des fichiers liées au commit précédents, suppression questions OK

--- a/src/GameBundle/Resources/config/routing.yml
+++ b/src/GameBundle/Resources/config/routing.yml
@@ -33,3 +33,9 @@ add_question:
 moderate_question:
     path:    /moderate
     defaults: { _controller: GameBundle:Admin:moderateQuestion }
+
+question_delete:
+    path:   /delete/{id}
+    defaults: { _controller: GameBundle:Admin:deleteQuestion }
+    requirements:
+        id: \d+
