page gestion des thèmes avancé, revoir ajout questions

--- a/src/GameBundle/Resources/config/routing.yml
+++ b/src/GameBundle/Resources/config/routing.yml
@@ -39,3 +39,7 @@ question_delete:
     defaults: { _controller: GameBundle:Admin:deleteQuestion }
     requirements:
         id: \d+
+
+options_question:
+    path:    /options
+    defaults: { _controller: GameBundle:Admin:optionsQuestion }
