mise en place du jeu : intégration du plateau, ..

--- a/src/GameBundle/Resources/config/routing.yml
+++ b/src/GameBundle/Resources/config/routing.yml
@@ -40,3 +40,7 @@ question_delete:
 options_question:
     path:    /options
     defaults: { _controller: GameBundle:Admin:optionsQuestion }
+
+play:
+    path:    /play
+    defaults: { _controller: GameBundle:Game:play }
