possibilité de répondre à une question

--- a/src/GameBundle/Resources/config/routing.yml
+++ b/src/GameBundle/Resources/config/routing.yml
@@ -67,7 +67,8 @@ get_random_question:
         id: \d+
         
 valid_answer:
-    path: /valid/answer
+    path: /valid/answer/{id}
     defaults: { _controller: GameBundle:Game:validAnswer }
     requirements: 
         _method: POST
+        id: \d+
