ajout nb de parties jouées en bdd, pour statistiques. MaJ à faire pour tous les joueurs

--- a/src/GameBundle/Resources/config/routing.yml
+++ b/src/GameBundle/Resources/config/routing.yml
@@ -83,7 +83,7 @@ valid_answer:
         bonus: \d+
 
 change_stats:
-    path: /bestscore/{finalScore}/{bestScore}/{gamerId}/{gameWonNb}/{cumulScore}/{level}/{index}
+    path: /bestscore/{finalScore}/{bestScore}/{gamerId}/{gameWonNb}/{gamePlayedNb}/{cumulScore}/{level}/{index}
     defaults: { _controller: GameBundle:Game:changeStats }
     requirements: 
         _method: POST
@@ -91,6 +91,7 @@ change_stats:
         bestScore: \d+
         gamerId: \d+
         gameWonNb: \d+
+        gamePlayedNb: \d+
         cumulScore: \d+
         level: \d+
         index: \d+
