MaJ des stats des joueurs

--- a/src/GameBundle/Resources/config/routing.yml
+++ b/src/GameBundle/Resources/config/routing.yml
@@ -83,18 +83,12 @@ valid_answer:
         bonus: \d+
 
 change_stats:
-    path: /bestscore/{finalScore}/{bestScore}/{gamerId}/{gameWonNb}/{gamePlayedNb}/{cumulScore}/{level}/{index}
+    path: /stats/{finalScore}/{gamerId}
     defaults: { _controller: GameBundle:Game:changeStats }
     requirements: 
         _method: POST
         finalScore: \d+
-        bestScore: \d+
         gamerId: \d+
-        gameWonNb: \d+
-        gamePlayedNb: \d+
-        cumulScore: \d+
-        level: \d+
-        index: \d+
 
 help:
     path:    /help
