--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,9 +1,10 @@
-question:
-    resource: "@GameBundle/Resources/config/routing.yml"
-    prefix:   /question    
 
 home:
     resource: "@UserBundle/Resources/config/routing.yml"
+    prefix:   /
+
+question:
+    resource: "@GameBundle/Resources/config/routing.yml"
     prefix:   /
 
 signup:
