--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -44,12 +44,11 @@ security:
     access_control:
      - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY}
      - { path: ^/signup, roles: IS_AUTHENTICATED_ANONYMOUSLY}
-    #  - { path: ^/admin, roles: ROLE_ADMIN}
-
-
-            # http_basic: ~
-            # http://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
-
-            # form_login: ~
-            # http://symfony.com/doc/current/cookbook/security/form_login_setup.html
-
+     - { path: ^/scores, roles: IS_AUTHENTICATED_REMEMBERED}
+     - { path: ^/help, roles: IS_AUTHENTICATED_REMEMBERED}
+     - { path: ^/setting, roles: IS_AUTHENTICATED_REMEMBERED}
+     - { path: ^/admin/, roles: ROLE_TEACHER}
+     - { path: ^/administration, roles: ROLE_ADMIN}
+     - { path: ^/play, roles: ROLE_USER}
+     - { path: ^/select, roles: ROLE_USER}
+     - { path: ^/gamer, roles: ROLE_USER}
