sécurité poussée pour paramètres et édition de gamers

--- a/src/GameBundle/Resources/config/routing.yml
+++ b/src/GameBundle/Resources/config/routing.yml
@@ -6,7 +6,7 @@ remove_answer:
         _method: DELETE
 
 validate_question:
-    path: /admin/validate/{id}
+    path: /validate/{id}
     defaults:
         _controller: GameBundle:Admin:validateQuestion
         id: 1            
