--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "claire/jeudeloie",
     "license": "proprietary",
     "type": "project",
+    "description": "The \"Symfony Standard Edition\" distribution",
     "autoload": {
         "psr-4": {
             "": "src/"
