--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -14,7 +14,12 @@ services:
 
     stats.question:
         class: GameBundle\Controller\StatsQuestion
-        arguments: [ '@doctrine.orm.entity_manager']
+        arguments: ['@doctrine.orm.entity_manager']
+
+    save.question:
+        class: GameBundle\Controller\SaveQuestion
+        arguments: ['@request_stack']
+
 
 #     app.webservice_user_provider:
 #         class: UserBundle\Security\User\WebserviceUserProvider
